--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,24 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 # Mod properties
 mod_version=1.0-SNAPSHOT
-maven_group=me.ddayo
-archives_name=aris-entity
-enabled_platforms=fabric,forge
 # Minecraft properties
 minecraft_version=1.20.1
 # Dependencies
 fabric_loader_version=0.16.14
 fabric_api_version=0.92.5+1.20.1
 forge_version=1.20.1-47.4.0
+
+# --- Auto-Generated Properties ---
+maven_group=com.example.app
+mod_id=arisextension
+archives_name=aris-extension
+mod_name=aris-extension
+enabled_platforms=fabric,forge
+export_doc_on_build=false
+mod_description=Aris Extension Project
+mod_authors=Dayo
+extend_init_engine=false
+extend_in_game_engine=false
+extend_client_init_engine=false
+extend_client_main_engine=false
+extend_client_in_game_engine=false
