--- a/settings.gradle
+++ b/settings.gradle
@@ -13,7 +13,8 @@ plugins {
     id 'org.gradle.toolchains.foojay-resolver-convention' version '0.8.0'
 }
 
-rootProject.name = 'aris-entity'
+// --- Auto-Generated Settings ---
+rootProject.name = 'aris-extension'
 
 includeBuild('aris-mc') {
     dependencySubstitution {
